# underway

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ngrok.yml  ngrok.yml.example
.github/workflows/: ci.yml  deploy-prod.yml  deploy-uat.yml  stale.yml
backend/: .env.example  .gitignore  pyproject.toml  test_model.py
backend/aligned/: __init__.py  app.py  config.py
backend/aligned/auth/: dependencies.py  google.py  jwt.py
backend/aligned/chat/: streaming.py  tools.py
backend/aligned/models/: __init__.py  base.py  conversation.py  external_account.py  task.py  types.py  user.py
backend/aligned/providers/: google_tasks.py  outlook_tasks.py  task_manager.py  todoist.py  token_refresh.py
backend/aligned/routes/: auth.py  settings.py  todoist_auth.py
backend/aligned/serializers/: chat.py  external_account.py
backend/aligned/services/: task_sync.py
backend/aligned/viewsets/: __init__.py  base.py  chat.py  external_accounts.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 56b7bec71b09_remove_client_id_secret_token_uri_from_.py  5e169cfae984_initial_schema.py  767105043a33_add_oauth_state_table.py  c869d602a748_add_ai_api_base_to_user.py
backend/scripts/: browser.py  run-e2e.sh  screenshot.py
backend/stubs/fastrest/: authentication.pyi  fields.pyi  generics.pyi  permissions.pyi  request.pyi  response.pyi  routers.pyi  serializers.pyi  settings.pyi  viewsets.pyi
backend/stubs/google/auth/transport/: requests.pyi
backend/stubs/google/oauth2/: credentials.pyi  id_token.pyi
backend/stubs/google_auth_oauthlib/: flow.pyi
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_calendar.py  test_chat.py  test_oauth_settings.py  test_smoke.py  test_tasks.py
backend/tests/integration/: test_auth.py  test_calendar.py  test_chat_streaming.py  test_conversations.py  test_external_accounts.py  test_health.py  test_settings.py  test_tasks.py  test_test_login.py  test_todoist_auth.py
backend/tests/unit/: test_calendar_models.py  test_calendar_oauth.py  test_calendar_provider.py  test_chat_serializers.py  test_chat_tools.py  test_config.py  test_external_account_disconnect.py  test_google_auth.py  test_jwt.py  test_models.py  test_task_sync.py
backend/underway/: __init__.py  app.py  config.py
backend/underway/auth/: dependencies.py
backend/underway/chat/: streaming.py  tools.py
backend/underway/models/: __init__.py  base.py  conversation.py  external_account.py  oauth_state.py  task.py  user.py
backend/underway/providers/: google_tasks.py  o365_credentials.py  outlook_tasks.py  task_manager.py  task_provider.py  task_sync_loop.py  todoist.py  token_refresh.py
backend/underway/providers/calendar/: __init__.py  base.py  factory.py  google.py  models.py  o365.py
backend/underway/routes/: auth.py  calendar.py  oauth.py  settings.py  todoist_auth.py
backend/underway/serializers/: chat.py  external_account.py  task.py
backend/underway/services/: task_sync.py
backend/underway/viewsets/: base.py  chat.py  external_accounts.py  tasks.py
docs/: oauth-providers.md  prod_install.md
docs/plans/: 00-migration-overview.md  01-phase0-scaffolding.md  02-phase1-foundation.md  03-phase2-tasks.md  04-phase3-chat.md  05-phase4-calendar.md  06-phase5-schedule.md  2026-03-08-ci-cd-branch-protection-design.md  2026-03-08-ci-cd-branch-protection.md  2026-03-08-phase0-scaffolding.md  2026-03-08-phase3-chat-design.md  2026-03-08-phase3-chat.md
e2e/: conftest.py  pytest.ini  test_accounts.py  test_calendar.py  test_chat.py  test_smoke.py  trace-screenshots.sh  view-trace.sh
frontend/: env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: calendar.ts  chat.ts  client.ts  todoist.ts
frontend/src/assets/: base.css
frontend/src/components/: ChatMessage.vue  TaskCard.vue
frontend/src/composables/: useTheme.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  calendar.ts  chat.ts
frontend/src/views/: AboutView.vue  AuthCallbackView.vue  CalendarView.vue  ChatView.vue  LoginView.vue  PrivacyView.vue  SettingsView.vue  TasksView.vue  TermsView.vue
scripts/: login.py  screenshot.py  setup-db.sh
