[tool.poetry]
name = "aligned"
version = "0.1.0"
description = "Intelligent task and calendar management"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.100"
fastrest = {version = "*", extras = ["sqlalchemy"]}
uvicorn = {version = "*", extras = ["standard"]}
sqlalchemy = {version = ">=2.0", extras = ["asyncio"]}
aiomysql = "*"
aiosqlite = "*"
pydantic = ">=2.0"
pydantic-settings = "*"
python-dotenv = "*"
pyjwt = {version = "*", extras = ["crypto"]}
httpx = "*"
litellm = "*"
todoist-api-python = "*"
O365 = "*"
msal = "*"
google-api-python-client = "*"
google-auth-oauthlib = "*"
alembic = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-playwright = "*"
playwright = "*"
mypy = "*"
ruff = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "TCH",
    "ANN",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"migrations/**" = ["ANN"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
strict_markers = true
markers = ["e2e: end-to-end tests requiring browser"]
addopts = "-m 'not e2e'"
