[tool.poetry]
name = "underway"
version = "0.1.0"
description = "Intelligent task and calendar management"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.100"
# TODO: replace with fastrest = "*" once https://github.com/hoaxnerd/fastrest.git merges py.typed fixes
fastrest = {git = "https://github.com/corrin/fastrest.git", branch = "main", extras = ["sqlalchemy", "mcp"]}
uvicorn = {version = "*", extras = ["standard"]}
sqlalchemy = {version = ">=2.0", extras = ["asyncio"]}
aiomysql = "*"
pydantic = ">=2.0"
pydantic-settings = "*"
python-dotenv = "*"
pyjwt = {version = "*", extras = ["crypto"]}
httpx = "*"
litellm = "*"
todoist-api-python = "*"
O365 = "*"
msal = "*"
google-api-python-client = "*"
google-auth-oauthlib = "*"
alembic = "*"
msgraph-sdk = "^1.55.0"
python-multipart = "^0.0.22"
aiosqlite = "^0.22.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-playwright = "*"
playwright = "*"
mypy = "*"
ruff = "*"
pre-commit = "*"
google-api-python-client-stubs = "^1.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
mypy_path = "stubs"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "ANN",
    "RUF",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
strict_markers = true
markers = ["e2e: end-to-end tests requiring browser"]
addopts = "-m 'not e2e'"
